@@ -1701,6 +1701,7 @@
 		      <property name="visible">True</property>
 		      <property name="label" translatable="yes">Set _headers</property>
 		      <property name="use_underline">True</property>
+		      <signal name="activate" handler="on_set_header_activate_default" object="score_window" last_modification_time="Fri, 29 Oct 2004 22:01:52 GMT"/>
 		      <signal name="activate" handler="gtk_widget_show" object="set_header" last_modification_time="Fri, 29 Oct 2004 22:01:52 GMT"/>
 
 		      <child internal-child="image">
