@@ -6,6 +6,7 @@
 #include "plugin.h"
 #include "gscore.h"
 #include "constants.h"
+#include "chords.h"
 
 /* ACCIDENTALS */
 #define ABC_SHARP "^"
@@ -111,10 +112,12 @@ static gchar *get_char_from_beam(gint type, object_e object)
         return "";
 }
 
-static gchar *get_char_from_pitch(gint key, gint type, gint pitch)
+static gchar *get_char_from_pitch(gulong group_id, gint key, gint type, gint pitch)
 {
         gint offset;
-        
+ 
+        if ( group_id != 0 ) return "";
+       
         switch(key)
         {
         case TREBLE_KEY:
@@ -173,6 +176,37 @@ static gchar *get_char_from_pitch(gint key, gint type, gint pitch)
         return "";
 }
 
+static gchar *get_char_from_chord(Staff_t *staff, Object_t *object)
+{
+        Object_t *object_data;
+        GList *listrunner_object;
+
+        char *retstr = "[";
+
+        listrunner_object = g_list_first(staff->Object_list);
+        while ( listrunner_object ) {
+                object_data = (Object_t *)listrunner_object->data;
+
+                if (object_data) {
+
+                        if (object->id == object_data->group_id) {
+                                retstr = g_strconcat(retstr,
+                                                     get_char_from_pitch(0, staff->key, object_data->type, object_data->pitch),
+                                                     NULL);
+                        }
+                        
+                }
+
+                listrunner_object = g_list_next(listrunner_object);
+        }
+
+        g_list_free(listrunner_object);
+
+        retstr = g_strconcat(retstr, "]", NULL);
+
+        return retstr;
+}
+
 static gchar *get_char_for_duration(const gint value)
 {
         switch(value)
@@ -211,7 +245,10 @@ static gchar *get_char_from_staccato(object_e object)
 
 static void abc_print_object(gpointer data, gpointer user_data)
 {
+        Staff_t  *staff = (Staff_t *)user_data; 
         Object_t *object;
+
+        gchar *char_from_object;
 
         object = (Object_t *) data;
 
@@ -236,11 +273,15 @@ static void abc_print_object(gpointer data, gpointer user_data)
                 g_print(" :| ");
                 break;
         default:
+                char_from_object = is_chord(staff, object) ? 
+                        get_char_from_chord(staff, object) : 
+                        get_char_from_pitch(object->group_id, staff->key, object->type, object->pitch),
+
                 g_print("%s%s%s%s%s",
                         get_char_from_staccato(object->nature),
                         get_char_from_beam(object->type, object->nature),
                         get_char_from_accidental(object->accidentals),
-                        get_char_from_pitch((gint) user_data, object->type, object->pitch),
+                        char_from_object,
                         get_char_for_duration(object->type));
 
         }
@@ -283,7 +324,7 @@ extern void save_file(const gchar *filename, Score_t *score)
 			if ( ! staff_data->Object_list)
 				printf("liste nulle\n");
 
-                        g_list_foreach(staff_data->Object_list, abc_print_object, (gpointer) staff_data->key);
+                        g_list_foreach(staff_data->Object_list, abc_print_object, (gpointer) staff_data);
 
                         g_print("\n");
 
